tests/rosetta/transpiler/Clojure/21-game.error
run error: exit status 1
WARNING: num already refers to: #'clojure.core/num in namespace: main, being replaced by: #'main/num
Syntax error (UnsupportedOperationException) compiling recur at (/workspace/mochi/tests/rosetta/transpiler/Clojure/21-game.clj:13:1247).
Can only recur from tail position

Full report at:
/tmp/clojure-17953298472932984279.edn
